syntax = "proto3";

package malonaz.ai.ai_engine.v1;

import "buf/validate/validate.proto";
import "google/api/client.proto";
import "google/api/resource.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/struct.proto";
import "malonaz/ai/v1/tool.proto";

option go_package = "github.com/malonaz/core/genproto/ai/ai_engine/v1";

// This API represents an AI Engine service for structured message generation.
//
// It provides tools for generating protobuf messages from natural language prompts.
service AiEngine {
  option (google.api.default_host) = "ai.malonaz.com";

  // Create a tool to generate a message.
  rpc CreateTool(CreateToolRequest) returns (ai.v1.Tool);

  // Parse the tool call arguments from a tool created using 'CreateTool', into a proto message.
  rpc ParseToolCall(ParseToolCallRequest) returns (google.protobuf.Struct);

  // Under the hood calls `CreateTool`, calls the AI service and then calls `ParseMessage`.
  rpc GenerateMessage(GenerateMessageRequest) returns (google.protobuf.Struct);
}

// Request message for AiService.CreateTool
message CreateToolRequest {
  // The descriptor reference for which to create a tool.
  DescriptorReference descriptor_reference = 1 [(buf.validate.field).required = true];

  // Optional field to specify which fields you wish to generate.
  google.protobuf.FieldMask field_mask = 2;
}

// Request message for Engine.ParseToolCall.
message ParseToolCallRequest {
  // The tool call to parse.
  ai.v1.ToolCall tool_call = 1;
}

// Request message for Engine.GenerateMessage.
message GenerateMessageRequest {
  // The descriptor reference for the message to generate.
  DescriptorReference descriptor_reference = 1 [(buf.validate.field).required = true];

  // The resource name of the model to use.
  // Format: providers/{provider}/models/{model}
  string model = 2 [(google.api.resource_reference).type = "ai.malonaz.com/Model"];

  // The prompt to feed the AI.
  string prompt = 3;

  // Optional field to specify which fields you wish to generate.
  google.protobuf.FieldMask field_mask = 4;
}

// A reference to a protobuf descriptor.
message DescriptorReference {
  // The descriptor full name.
  oneof full_name {
    option (buf.validate.oneof).required = true;
    // The fully qualified name of the message.
    string message = 1;
    // The fully qualified name of the method.
    string method = 2;
  }
}
